--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.x",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -21,11 +20,10 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "start": "env-cmd -f .env.development react-app-rewired start",
+    "start": "env-cmd -f .env.production react-app-rewired start",
     "start:dev": "env-cmd -f .env.development react-app-rewired start",
-    "build": "env-cmd -f .env.development react-app-rewired build",
+    "build": "env-cmd -f .env.production react-app-rewired build",
     "build:dev": "env-cmd -f .env.development react-app-rewired build",
-  
     "eject": "react-app-rewired eject",
     "precommit": "lint-staged",
     "lint": "node_modules/.bin/eslint --max-warnings=0 --ext .js,.jsx,.ts,.tsx  --ignore-path .gitignore src/",
@@ -56,11 +54,9 @@
     "@types/lodash": "^4.14.149",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router-dom": "^5.1.3",
-    "@types/react-text-mask": "^5.4.6",
     "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
-    "apollo-client": "^2.6.10",
     "env-cmd": "^10.1.0",
     "eslint": "6.x",
     "eslint-config-airbnb": "^18.0.1",
