--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "^4.5.3",
     "clsx": "^1.1.0",
     "lodash": "^4.17.15",
     "node-gyp": "^7.0.0",
